--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kakao-with-expo",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start",
@@ -10,10 +10,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans-kr": "^0.2.3",
     "expo": "~51.0.17",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
+    "expo-image": "~1.12.12",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
